Committing Unpushed errors